# PainkillerEngine

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  GOAL.md  README.md  ROADMAP.md  STATE.md  run_employee_2.bat  run_employee_3.bat  run_employee_4.bat  run_employee_5.bat  stdout.txt
ai_team/: README.md
ai_team/employee_2_render/: INBOX.md  OUTBOX.md
ai_team/employee_3_gameplay/: INBOX.md  OUTBOX.md
ai_team/employee_4_world/: INBOX.md  OUTBOX.md
ai_team/employee_5_network/: INBOX.md  OUTBOX.md
build_x64/: CMakeCache.txt
docs/: ADVANCED_FEATURES.md  ARCHITECTURE.md  CODING_STANDARDS.md  CONTRIBUTING.md  HANDOFF.md  README.md  ROADMAP.md  TEAM.md
handoff/: README.md  employee_protocol.md  leadership_protocol.md
saves/: world.sav
scripts/: ai_dashboard.py  dashboard.html  dashboard_server.py  fix2.py  fix_break.py  fix_chunk_gen.py  fix_lod.py  fix_network.py  fix_player.py  fix_saveload.py  fix_textures.py  fix_timeslice.py  fix_vg.py  fix_wireframe.py  setup_deps.ps1  spawn_employee.ps1
sessions/: 20260716-001_codex_leadership.md  20260716-002_codex_first_round.md  20260716-003_codex_employee_setup.md  20260716-004_codex_final.md  20260716-005_codex_final.md  20260717-001_codex_final.md  20260717-002_codex_final.md
shaders/: basic.frag  basic.vert
src/: CMakeLists.txt
src/core/: CMakeLists.txt  Logger.cpp  Logger.h  Types.h
src/demo/: CMakeLists.txt  DemoApp.cpp  DemoApp.h  main.cpp
src/engine/: CMakeLists.txt  Engine.cpp  Engine.h  Input.cpp  Input.h  Timer.cpp  Timer.h  Window.cpp  Window.h
src/game/: Block.cpp  Block.h  BlockRaycast.cpp  BlockRaycast.h  CMakeLists.txt  Chunk.cpp  Chunk.h  Network.cpp  Network.h  Noise.cpp  Noise.h  Packet.cpp  Packet.h  ParticleSystem.cpp  ParticleSystem.h  PlayerController.cpp  PlayerController.h  SoundManager.cpp  SoundManager.h  TerrainGenerator.cpp  TerrainGenerator.h  TreeGenerator.cpp  TreeGenerator.h  VoxelGame.cpp  VoxelGame.h  VoxelGame_shutdown.txt  World.cpp  World.h  main.cpp
src/math/: CMakeLists.txt  Math.cpp  Math.h  Matrix.h  Quaternion.h  Transform.h  Vector.h
src/render/: Buffer.cpp  Buffer.h  CMakeLists.txt  DirectX11Renderer.cpp  DirectX11Renderer.h  Mesh.cpp  Mesh.h  OpenGLRenderer.cpp  OpenGLRenderer.h  PipelineState.cpp  PipelineState.h  RenderTypes.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VulkanRenderer.cpp  VulkanRenderer.h
src/resource/: CMakeLists.txt  ModelLoader.cpp  ModelLoader.h  ResourceManager.cpp  ResourceManager.h  TextureLoader.cpp  TextureLoader.h
src/scene/: CMakeLists.txt  Camera.cpp  Camera.h  Component.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h
src/scene/components/: CameraComponent.h  LightComponent.h  MaterialComponent.h  MeshComponent.h  TransformComponent.h
tasks/: README.md  task_001_fix_greedy_mesh.md  task_002_multi_thread_chunks.md  task_template.md
tasks/active/: task_003_block_placement.md
tests/: CMakeLists.txt  test_math.cpp
